// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders Icon correctly 1`] = `
<i
  aria-hidden={true}
  className=

      {
        display: inline-block;
      }
  data-icon-name="CompassNW"
  role="presentation"
>
  
</i>
`;

exports[`Icon renders Icon correctly using iconName 1`] = `
<i
  aria-hidden={true}
  className=

      {
        display: inline-block;
      }
  data-icon-name="Upload"
  role="presentation"
>
  
</i>
`;
